--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
     <h1>Hola</h1>
     <p>mi nombre es Kairiyama, cristian soy desarrollador web</p>   
-    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFvApEBL9IUvg/profile-displayphoto-shrink_200_200/0/1653329468301?e=1658966400&v=beta&t=Tx5TzavhSFc-BGLEWUiKIMMSe38YYoWZWqnPSGEQUnQ" alt="Kairiyama Cristian"> 
-    
+    <img src="https://images.pexels.com/photos/270348/pexels-photo-270348.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Kairiyama Cristian"> 
 </body>
 </html>
