--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
+    <!-- css-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Hola</h1>
-    <p>mi nombre es Kairiyama, cristian soy desarrollador web</p>   
+    <h1>Hi, My name is Kairiyama, Cristian Nahuel</h1>
+    <p>Soy estudiante de programacion del roque gonzalez</p>   
     <img src="https://images.pexels.com/photos/270348/pexels-photo-270348.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Kairiyama Cristian"> 
 </body>
 </html>
