prueba ensenar html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,39 @@
 </head>
 <body>
 
-    <h1>Hi, My name is Kairiyama, Cristian Nahuel</h1>
-    <p>Soy estudiante de programacion del roque gonzalez</p>   
-    <img src="https://images.pexels.com/photos/270348/pexels-photo-270348.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Kairiyama Cristian"> 
+    <h1>Hi, My name is Kairiyama, Cristian Nahuel (titulo 1)</h1>
+    <h2>Soy estudiante de programacion del roque gonzalez (titulo 2)</h2>
+    <h3>titulo3</h3>
+    <h4>titulo4</h4>
+    <h5>titulo5</h5>
+    <h6>titulo6</h6>
+    <p>parrafo</p>
+    <img src="https://images.pexels.com/photos/270348/pexels-photo-270348.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="programacion">
+
+
+
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+
+
+
+
+
+    <p>Mis redes</p>
+    <a href="/">Facebook</a>
+    <a href="/">Twitter</a>
+    <a href="/">Linkedin</a>
+    <a href="/">GitHub</a>
+    <a href="/">Instagram</a>
+
+    <img src="https://images.pexels.com/photos/7516509/pexels-photo-7516509.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Perros"> 
+    <a href="https://htmlreference.io/">Html cajitas</a>
+    <h2>Perros</h2>
+
+
+
+
 </body>
 </html>
