--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div id="root"></div>
+
+
+    
+    <script src="https://kit.fontawesome.com/4d0683f436.js" crossorigin="anonymous"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
